k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: naar-noor
  labels:
    app: naar-noor
    managed-by: terraform
